--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,10 @@
 {
-  "extends": "@tsconfig/node-lts-strictest/tsconfig.json"
+  "extends": "@tsconfig/node-lts-strictest/tsconfig.json",
+  "include": [
+    "index.js",
+    "index.spec.ts"
+  ],
+  "compilerOptions": {
+    "noEmit": true
+  }
 }
