--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/eslint": "^8.4.10",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.15",
+    "@types/node-fetch": "^2.6.2",
     "chai": "^4.3.7",
     "cspell": "^6.17.0",
     "eslint": "^8.29.0",
@@ -58,6 +59,7 @@
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "markdownlint-cli": "^0.32.2",
     "mocha": "^10.2.0",
+    "node-fetch": "^2.6.7",
     "ts-mocha": "^10.0.0",
     "typescript": "^4.9.4"
   }
