--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "eslint-import-resolver-typescript": ">=3.5.2",
     "eslint-plugin-import": ">=2.26.0",
     "eslint-plugin-jsdoc": ">=39.6.2",
-    "eslint-plugin-no-null": ">=1.0.2",
     "eslint-plugin-prefer-arrow": ">=1.2.3",
-    "eslint-plugin-promise": ">=6.1.1"
+    "eslint-plugin-promise": ">=6.1.1",
+    "eslint-plugin-unicorn": ">=45.0.2"
   },
   "devDependencies": {
     "@tsconfig/node-lts-strictest": "^18.12.1",
@@ -59,9 +59,9 @@
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsdoc": "^39.6.4",
-    "eslint-plugin-no-null": "^1.0.2",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-unicorn": "^45.0.2",
     "markdownlint-cli": "^0.32.2",
     "mocha": "^10.2.0",
     "node-fetch": "^2.6.7",
