--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@andreashuber69/eslint-config",
   "version": "1.1.4",
-  "description": "Comprehensive, carefullly curated and tested shareable eslint config for TypeScript projects",
+  "description": "Provides a comprehensive, carefullly curated and tested shareable eslint config for TypeScript projects.",
   "keywords": [
     "eslint",
     "eslintconfig",
