--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "eslintconfig",
     "typescript"
   ],
-  "homepage": "https://github.com/andreashuber69/eslint-config/blob/master/README.md#--",
+  "homepage": "https://github.com/andreashuber69/eslint-config/blob/master/README.md#----andreashuber69eslint-config",
   "repository": {
     "type": "git",
     "url": "https://github.com/andreashuber69/eslint-config.git"
