chore: add keyword

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [
     "eslint",
     "eslintconfig",
+    "eslint-config",
     "typescript"
   ],
   "homepage": "https://github.com/andreashuber69/eslint-config/blob/master/README.md#----andreashuber69eslint-config",
