--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   "scripts": {
     "prelint": "cspell '**/*.*' && markdownlint '*.md'",
     "lint": "eslint --ext .js,.ts --report-unused-disable-directives 'index.js' './test' ",
-    "test": "ts-mocha './test/index.spec.ts'",
+    "test-no-coverage": "ts-mocha './test/index.spec.ts'",
+    "test": "c8 --include 'index.js' --reporter=text --reporter=lcov --all npm run test-no-coverage",
+    "show-coverage": "alive-server 'coverage/lcov-report'",
     "preci": "npm run lint",
     "ci": "npm test"
   },
@@ -55,7 +57,10 @@
     "@types/node-fetch": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
+    "alive-server": "^1.2.9",
+    "c8": "^7.12.0",
     "chai": "^4.3.7",
+    "coveralls": "^3.1.1",
     "cspell": "^6.19.2",
     "eslint": "^8.32.0",
     "eslint-import-resolver-typescript": "^3.5.3",
