--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,16 @@
 {
+  "cSpell.enabledLanguageIds": [
+    "json",
+    "jsonc",
+    "markdown",
+    "plaintext",
+    "shellscript",
+    "typescript",
+    "yaml"
+  ],
+  "cSpell.import": ["../cspell.json"],
   "files.autoSave": "onFocusChange",
-  "git.confirmSync": false
+  "git.confirmSync": false,
+  "typescript.tsdk": "./node_modules/typescript/lib",
+  "typescript.preferences.quoteStyle": "double"
 }
