--- a/package.json
+++ b/package.json
@@ -38,15 +38,15 @@
     "ci": "npm test"
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": ">=5.42.0",
-    "@typescript-eslint/parser": ">=5.42.0",
-    "eslint": ">=8.27.0",
-    "eslint-import-resolver-typescript": ">=3.5.2",
-    "eslint-plugin-import": ">=2.27.4",
-    "eslint-plugin-jsdoc": ">=39.6.2",
-    "eslint-plugin-prefer-arrow": ">=1.2.3",
-    "eslint-plugin-promise": ">=6.1.1",
-    "eslint-plugin-unicorn": ">=45.0.2"
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "eslint": "^8.34.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsdoc": "^40.0.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-unicorn": "^45.0.2"
   },
   "devDependencies": {
     "@tsconfig/node-lts-strictest": "^18.12.1",
