--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 # https://github.com/andreashuber69/eslint-config/blob/master/README.md#----andreashuber69eslint-config
 os: linux
-dist: xenial
+dist: focal
 language: node_js
 node_js:
-- 16
+- lts/*
 
 script:
 - npm run ci
