--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "prelint": "cspell '**' && markdownlint '**/*.md'",
     "lint": "eslint --report-unused-disable-directives 'index.js' 'test/**' ",
-    "test-no-coverage": "ts-mocha 'test/**/*.spec.ts'",
+    "test-no-coverage": "node --loader tsx --test test/*.spec.ts",
     "test": "c8 --exclude 'test/**' --reporter=text --reporter=lcov npm run test-no-coverage",
     "show-coverage": "vite 'coverage/lcov-report' --logLevel error --open",
     "preci": "npm run lint",
@@ -50,15 +50,12 @@
   },
   "devDependencies": {
     "@tsconfig/node-lts-strictest": "^18.12.1",
-    "@types/chai": "^4.3.5",
     "@types/eslint": "^8.40.2",
-    "@types/mocha": "^10.0.1",
     "@types/node": "^18.16.19",
     "@types/node-fetch": "^2.6.4",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "c8": "^8.0.0",
-    "chai": "^4.3.7",
     "coveralls": "^3.1.1",
     "cspell": "^6.31.1",
     "eslint": "^8.44.0",
@@ -69,9 +66,8 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-unicorn": "^47.0.0",
     "markdownlint-cli": "^0.35.0",
-    "mocha": "^10.2.0",
     "node-fetch": "^2.6.12",
-    "ts-mocha": "^10.0.0",
+    "tsx": "^3.12.7",
     "typescript": "^5.1.6",
     "vite": "^4.3.9"
   }
