--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,9 @@
     // The base sets importsNotUsedAsValues to "error" leading to a depreciation warning with TS >= 5.0. Since the new
     // verbatimModuleSyntax option does not seem to work with CommonJS modules, we can only ignore the warning for now.
     "ignoreDeprecations": "5.0",
-    // The base erroneously sets "node", see https://github.com/tsconfig/bases/issues/204
-    "moduleResolution": "node16",
+    // https://devblogs.microsoft.com/typescript/announcing-typescript-5-2/#module-and-moduleresolution-must-match-under-recent-node-js-settings
+    "module": "Node16",
+    "moduleResolution": "Node16",
     "noEmit": true
   },
   "include": [
