--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "ci": "npm test"
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "@typescript-eslint/parser": "^6.7.5",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
     "eslint": "^8.51.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.28.1",
@@ -50,15 +50,15 @@
   },
   "devDependencies": {
     "@tsconfig/node-lts-strictest": "^18.12.1",
-    "@types/eslint": "^8.44.4",
-    "@types/node": "^18.17.17",
-    "@types/node-fetch": "^2.6.6",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "@typescript-eslint/parser": "^6.7.5",
-    "@typescript-eslint/utils": "^6.7.5",
+    "@types/eslint": "^8.44.6",
+    "@types/node": "18.17",
+    "@types/node-fetch": "^2.6.7",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
+    "@typescript-eslint/utils": "^6.8.0",
     "c8": "^8.0.1",
     "coveralls": "^3.1.1",
-    "cspell": "^7.3.7",
+    "cspell": "^7.3.8",
     "eslint": "^8.51.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.28.1",
@@ -68,8 +68,8 @@
     "eslint-plugin-unicorn": "^48.0.1",
     "markdownlint-cli": "^0.37.0",
     "node-fetch": "^2.7.0",
-    "tsx": "^3.13.0",
+    "tsx": "^3.14.0",
     "typescript": "^5.2.2",
-    "vite": "^4.4.11"
+    "vite": "^4.5.0"
   }
 }
