--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "c8": "^8.0.1",
     "coveralls": "^3.1.1",
     "cspell": "^7.3.8",
+    "dprint": "^0.41.0",
     "eslint": "^8.51.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.28.1",
