--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ci": "npm test"
   },
   "peerDependencies": {
+    "@stylistic/eslint-plugin": "^1.4.1",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "eslint": "^8.53.0",
@@ -49,6 +50,7 @@
     "eslint-plugin-unicorn": "^49.0.0"
   },
   "devDependencies": {
+    "@stylistic/eslint-plugin": "^1.4.1",
     "@tsconfig/node-lts-strictest": "^18.12.1",
     "@types/eslint": "^8.44.7",
     "@types/node": "18.17",
