--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,11 @@
 {
-  // node-lts-strictest is deprecated in favor of using an array to combine node-lts and strictest but doing so
-  // currently leads to problems with the eslint-plugin-import package, see
-  // https://github.com/import-js/eslint-plugin-import/issues/2751
-  "extends": "@tsconfig/node-lts-strictest/tsconfig.json",
+  // The following only works with the eslint-plugin-import package due to an override in package.json, see
+  // https://github.com/import-js/eslint-plugin-import/issues/2751#issuecomment-1496216195
+  "extends": [
+    "@tsconfig/strictest/tsconfig",
+    "@tsconfig/node-lts/tsconfig"
+  ],
   "compilerOptions": {
-    // The base sets importsNotUsedAsValues to "error" leading to a depreciation warning with TS >= 5.0. Since the new
-    // verbatimModuleSyntax option does not seem to work with CommonJS modules, we can only ignore the warning for now.
-    "ignoreDeprecations": "5.0",
-    // https://devblogs.microsoft.com/typescript/announcing-typescript-5-2/#module-and-moduleresolution-must-match-under-recent-node-js-settings
-    "module": "Node16",
-    "moduleResolution": "Node16",
     "noEmit": true
   },
   "include": [
