--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   },
   "scripts": {
     "prelint": "cspell '**' && markdownlint '**/*.md'",
-    "lint": "eslint --report-unused-disable-directives 'index.js' 'test/**' ",
+    "lint": "eslint --ext .cjs,.js,.ts --report-unused-disable-directives '.'",
+    "pretest-no-coverage": "tsc",
     "test-no-coverage": "node --import tsx --test test/*.spec.ts",
     "test": "c8 --exclude 'test/**' --reporter=text --reporter=lcov npm run test-no-coverage",
     "show-coverage": "vite 'coverage/lcov-report' --logLevel error --open",
