--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-jsdoc": "^48.2.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-unicorn": "^51.0.1"
   },
   "devDependencies": {
@@ -65,6 +66,7 @@
     "eslint-plugin-jsdoc": "^48.2.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-unicorn": "^51.0.1",
     "markdownlint-cli": "^0.39.0",
     "node-fetch": "^2.7.0",
