--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "test": "c8 --exclude 'test/**' --reporter=text --reporter=lcov npm run test-no-coverage",
     "show-coverage": "vite 'coverage/lcov-report' --logLevel error --open",
     "ci": "npm run lint && tsc && npm test",
-    "preversion": "git checkout develop && git push && git pull",
-    "version": "git flow release start v`cat package.json | jq -r '.version' && git stash push >/dev/null 2>&1` && git stash pop",
-    "postversion": "git commit -a -m \"chore: start release v`cat package.json | jq -r '.version'`\"",
+    "preversion": "tsx './scripts/preversion.ts'",
+    "version": "tsx './scripts/version.ts'",
+    "postversion": "tsx './scripts/postversion.ts'",
     "finish-release": "git flow release finish -p -m \"chore: finish release\" v`cat package.json | jq -r '.version'`"
   },
   "peerDependencies": {
