chore: move index.js to dist

--- a/package.json
+++ b/package.json
@@ -21,9 +21,8 @@
     "name": "Andreas Huber"
   },
   "type": "module",
-  "main": "index.js",
+  "main": "dist/index.js",
   "files": [
-    "/index.js",
     "/*.md"
   ],
   "publishConfig": {
@@ -32,8 +31,8 @@
   "scripts": {
     "prelint": "cspell '**' && markdownlint '**/*.md'",
     "lint": "eslint --report-unused-disable-directives '.'",
-    "test-no-coverage": "node --import tsx --test test/*.spec.ts",
-    "test": "c8 --exclude 'test/**' --reporter=text --reporter=lcov npm run test-no-coverage",
+    "test-no-coverage": "node --import tsx --test src/*.spec.ts",
+    "test": "c8 --exclude 'src/*.ts' --reporter=text --reporter=lcov npm run test-no-coverage",
     "show-coverage": "vite 'coverage/lcov-report' --logLevel error --open",
     "ci": "npm run lint && tsc && npm test",
     "preversion": "tsx './scripts/preversion.ts'",
