--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,9 @@
   ],
   "compilerOptions": {
     "checkJs": true,
-    "noEmit": true
+    "outDir": "dist",
   },
   "include": [
-    "test/**/*.ts"
+    "src/**/*.ts"
   ]
 }
