build: add step

--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
   "scripts": {
     "prelint": "cspell '**' && markdownlint '**/*.md'",
     "lint": "eslint",
+    "build": "tsc",
     "test-no-coverage": "node --import tsx --test src/*.spec.ts",
     "test": "c8 --exclude 'src/*.ts' --reporter=text --reporter=lcov npm run test-no-coverage",
     "show-coverage": "vite 'coverage/lcov-report' --logLevel error --open",
-    "ci": "npm run lint && tsc && npm test",
+    "ci": "npm run lint && npm run build && npm test",
     "preversion": "tsx './scripts/preversion.ts'",
     "version": "tsx './scripts/version.ts'",
     "postversion": "tsx './scripts/postversion.ts'",
