--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "prelint": "cspell '**' && markdownlint '**/*.md'",
     "lint": "eslint",
     "build": "tsc",
-    "test-no-coverage": "node --import tsx --test src/*.spec.ts",
-    "test": "c8 --exclude 'src/*.ts' --reporter=text --reporter=lcov npm run test-no-coverage",
+    "test-no-coverage": "vitest --run",
+    "test": "vitest --run --coverage",
     "show-coverage": "vite 'coverage/lcov-report' --logLevel error --open",
     "ci": "npm run lint && npm run build && npm test",
     "preversion": "tsx './scripts/preversion.ts'",
@@ -73,6 +73,7 @@
     "@types/node-fetch": "^2.6.12",
     "@typescript-eslint/eslint-plugin": "^8.18.2",
     "@typescript-eslint/parser": "^8.18.2",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "c8": "^10.1.3",
     "coveralls": "^3.1.1",
     "cspell": "^8.17.1",
@@ -90,6 +91,7 @@
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vitest": "^2.1.8"
   }
 }
