--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
   ],
   "compilerOptions": {
     "checkJs": true,
-    "outDir": "dist",
+    "noEmit": true
   },
   "include": [
     "src/**/*.ts"
