--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "name": "Andreas Huber"
   },
   "type": "module",
-  "main": "dist/index.js",
+  "exports": {
+    ".": {
+      "node": "dist/index.js",
+      "types": "dist/index.d.ts"
+    }
+  },
   "files": [
     "/*.md"
   ],
@@ -30,7 +35,7 @@
   },
   "scripts": {
     "prelint": "cspell '**' && markdownlint '**/*.md'",
-    "lint": "eslint",
+    "lint": "eslint --flag unstable_ts_config",
     "build": "tsc && vite build --config vite.config.ts",
     "test-no-coverage": "vitest --run",
     "test": "vitest --run --coverage",
@@ -86,12 +91,14 @@
     "eslint-plugin-react-hooks": "5.1.0",
     "eslint-plugin-unicorn": "^56.0.1",
     "globals": "^15.14.0",
+    "jiti": "^2.4.2",
     "markdownlint-cli": "^0.43.0",
     "node-fetch": "^2.7.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.19.1",
     "vite": "^6.0.7",
+    "vite-plugin-dts": "^4.4.0",
     "vitest": "^2.1.8"
   }
 }
