--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "test": "vitest --run --coverage",
     "show-coverage": "vite 'coverage/lcov-report' --logLevel error --open",
     "ci": "npm run lint && npm run build && npm test",
-    "preversion": "tsx './scripts/preversion.ts'",
-    "version": "tsx './scripts/version.ts'",
-    "postversion": "tsx './scripts/postversion.ts'",
+    "preversion": "jiti 'scripts/preversion.ts'",
+    "version": "jiti 'scripts/version.ts'",
+    "postversion": "jiti 'scripts/postversion.ts'",
     "finish-release": "git flow release finish -p -m \"chore: finish release\" v`cat package.json | jq -r '.version'`"
   },
   "peerDependencies": {
@@ -94,7 +94,6 @@
     "jiti": "^2.4.2",
     "markdownlint-cli": "^0.43.0",
     "node-fetch": "^2.7.0",
-    "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.19.1",
     "vite": "^6.0.7",
