--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
   "files.autoSave": "onFocusChange",
   "editor.rulers": [120],
   "git.confirmSync": false,
-  "typescript.tsdk": "./node_modules/typescript/lib",
+  "typescript.tsdk": "node_modules/typescript/lib",
   "typescript.preferences.quoteStyle": "double",
   "terminal.integrated.scrollback": 3000
 }
