--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   "type": "module",
   "exports": {
     ".": {
-      "node": "dist/index.js",
-      "types": "dist/index.d.ts"
+      "node": "./dist/index.js",
+      "types": "./dist/index.d.ts"
     }
   },
   "files": [
