--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "scripts": {
     "prelint": "cspell '**' && markdownlint '**/*.md'",
     "lint": "eslint",
-    "build": "tsc && vite build --config vite.config.ts",
+    "build": "tsc && vite build",
     "test-no-coverage": "vitest --run",
     "test": "vitest --run --coverage",
     "show-coverage": "vite 'coverage/lcov-report' --logLevel error --open",
