--- a/package.json
+++ b/package.json
@@ -68,8 +68,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-unicorn": "^56.0.1",
-    "typescript-eslint": "^8.21.0",
-    "vite-plugin-dts": "^4.5.0"
+    "typescript-eslint": "^8.21.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.5",
