--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,9 @@
   ],
   "compilerOptions": {
     "allowImportingTsExtensions": true,
-    "checkJs": true,
     "noEmit": true
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*"
   ]
 }
