--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-unicorn": "^56.0.1",
+    "jiti": "^2.4.2",
     "typescript-eslint": "^8.21.0"
   },
   "devDependencies": {
