--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "postversion": "jiti 'scripts/postversion.ts'",
     "finish-release": "git flow release finish -p -m \"chore: finish release\" v`cat package.json | jq -r '.version'`"
   },
-  "peerDependencies": {
+  "dependencies": {
     "@eslint/compat": "^1.2.9",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.27.0",
@@ -71,30 +71,13 @@
     "typescript-eslint": "^8.32.1"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.9",
-    "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.27.0",
-    "@stylistic/eslint-plugin": "^4.4.0",
     "@tsconfig/strictest": "^2.0.5",
-    "@types/eslint": "^9.6.1",
-    "@types/eslint__eslintrc": "^2.1.2",
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
     "@vitest/coverage-istanbul": "^3.1.4",
     "coveralls": "^3.1.1",
     "cspell": "^9.0.2",
-    "eslint": "^9.27.0",
-    "eslint-import-resolver-typescript": "^4.4.1",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsdoc": "^50.6.17",
-    "eslint-plugin-promise": "^7.2.1",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-unicorn": "^59.0.1",
     "jiti": "^2.4.2",
     "markdownlint-cli": "^0.45.0",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.1",
     "vite": "^6.3.5",
     "vite-plugin-dts": "^4.5.4",
     "vitest": "^3.1.4"
